<resources>
    <string name="app_name">Travelmark</string>
    <string name="button_addTravelmark">Add Travelmark</string>
    <string name="hint_travelmarkTitle">Title</string>
    <string name="hint_travelmarkDescription">Description</string>
    <string name="hint_travelmarkLocation">Location</string>
    <string name="menu_addTravelmark">Add</string>
    <string name="menu_map">Map</string>
    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_cancelTravelmark">Cancel</string>
    <string name="menu_searchTravelmark">Search</string>
    <string name="menu_saveTravelmark"> Save Travelmark </string>
    <string name="button_addImage"> Add Image </string>
    <string name="button_changeImage">Change Image</string>
    <string name="select_travelmark_image">Select travelmark image</string>
    <string name="warning_enterTitle">Please enter a location and title for your travelmark</string>
    <string name="warning_incorrect_credentials">Incorrect Login Credentials</string>
    <string name="warning_enter_credentials">Please enter an email and password</string>
    <string name="login_success">Logged In</string>
    <string name="travelmark_category_header">Choose your category</string>
    <string name="travelmark_rating_header">Rate travelmark</string>
    <string name="add_travelmark_header">Make your mark</string>
    <string name="option_see">Sight to see</string>
    <string name="option_do">Thing to do</string>
    <string name="option_eat">Food to eat</string>
    <string name="button_location">Set Location</string>
    <string name="button_register">Sign Up</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_travelmark_maps">Travelmark Map</string>
    <string name="travelmark_image_placeholder">Travelmark Image</string>
    <string name="travelmark_title_placeholder">Travelmark Title</string>
    <string name="travelmark_description_placeholder">Travelmark Description</string>
    <string name="travelmark_category_placeholder">Travelmark Category</string>
    <string name="search_hint">Search Location</string>
    <string name="login_message">Sign in</string>
    <string name="register_message">Create your account</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="message_no_account">Don\'t have an account?</string>
    <string name="message_create_account">Create one</string>
    <string name="chip_option_all">All</string>
    <string name="chip_option_do">To do</string>
    <string name="chip_option_see">To see</string>
    <string name="chip_option_eat">To eat</string>
    <string name="chip_option_favourite">Favourite</string>
    <string name="checkbox_favourite">Favourite</string>
    <string name="switchLayout">Switch</string>
</resources>